# JetBot-from-Scratch

./: .gitignore  LICENSE  README.md  requirements.txt
ROS/: README.md
ROS/jetbot_hw/: CMakeLists.txt  package.xml
ROS/jetbot_hw/scripts/: ina_pub.py  ina_sub.py
bare/: robot_bare.py  robot_basic.py
basic/: gamepad_basic.py  gamepad_jetbot.py  oled_basic.py  read_INA219_basic.py  robot_basic.py  temp_zones.py
jetbot_fs/: __init__.py  jetson.json  joystick.py  keymap.json  laptop.json  setup_gamepad.py
